# Model-Predictive-Control-for-Differential-Drive-Robot

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_mpc.launch  gazebo_tb3_sim.launch  mpc.launch
src/: main.py  mpc.cpp
